left aligned text on product pages. Fixes #53.

--- a/postcode/static/css/custom.css
+++ b/postcode/static/css/custom.css
@@ -557,6 +557,10 @@ padding: .25em .6em;
   padding-bottom: 1.5em;  
  }
 
+ .feature_text {
+  text-align: left;
+ }
+
  @media(min-width:992px){
   h1 {
   color: #636363;
